# SpatiaLite

./: AUTHORS  Doxyfile.in  Makefile  Makefile-amalgamation  Makefile.am  Makefile.in  README  aclocal.m4  amalgamate.c  config-msvc.h  config.h  config.h.in  configure  configure.ac  libspatialite.def  mainpage.doxy  makefile-amalgamation.vc  makefile.vc  nmake.opt  spatialite-sql-latest.html  spatialite.pc.in
src/: Makefile.am  Makefile.in
src/automake/: Makefile.am  README  configure.ac  libspatialite.def  makefile.vc  nmake.opt  spatialite.pc.in
src/dxf/: Makefile.am  Makefile.in  dxf_load_distinct.c  dxf_load_mixed.c  dxf_loader.c  dxf_parser.c  dxf_private.h  dxf_writer.c  spatialite_load_dxf.c
src/gaiaaux/: Makefile.am  Makefile.in  gg_sqlaux.c  gg_utf8.c
src/gaiaexif/: Makefile.am  Makefile.in  gaia_exif.c
src/gaiageo/: Ewkt.c  Ewkt.h  Gml.c  Kml.c  Makefile.am  Makefile.in  geoJSON.c  gg_advanced.c  gg_endian.c  gg_ewkt.c  gg_extras.c  gg_geoJSON.c  gg_geodesic.c  gg_geometries.c  gg_geoscvt.c  gg_gml.c  gg_kml.c  gg_lwgeom.c  gg_relations.c  gg_shape.c  gg_transform.c  gg_vanuatu.c  gg_voronoj.c  gg_wkb.c  gg_wkt.c  gg_xml.c  lex.Ewkt.c  lex.GeoJson.c  lex.Gml.c  lex.Kml.c  lex.VanuatuWkt.c  vanuatuWkt.c
src/geopackage/: Makefile.am  Makefile.in  gpkgCreateBaseTables.c  gpkgCreateTilesTable.c  gpkgCreateTilesZoomLevel.c  gpkg_add_raster_triggers.c  gpkg_get_normal_row.c  gpkg_point_to_tile.c
src/headers/: Makefile.am  Makefile.in  spatialite.h  spatialite_private.h
src/shapefiles/: Makefile.am  Makefile.in  shapefiles.c  validator.c
src/spatialite/: Makefile.am  Makefile.in  extra_tables.c  mbrcache.c  metatables.c  spatialite.c  spatialite_init.c  statistics.c  virtualXL.c  virtualbbox.c  virtualdbf.c  virtualfdo.c  virtualnetwork.c  virtualshape.c  virtualspatialindex.c  virtualxpath.c
src/sqlite3/: sqlite3.c
src/srsinit/: Makefile.am  Makefile.in  epsg_inlined_00.c  epsg_inlined_01.c  epsg_inlined_02.c  epsg_inlined_03.c  epsg_inlined_04.c  epsg_inlined_05.c  epsg_inlined_06.c  epsg_inlined_07.c  epsg_inlined_08.c  epsg_inlined_09.c  epsg_inlined_10.c  epsg_inlined_11.c  epsg_inlined_12.c  epsg_inlined_13.c  epsg_inlined_14.c  epsg_inlined_15.c  epsg_inlined_16.c  epsg_inlined_17.c  epsg_inlined_18.c  epsg_inlined_19.c  epsg_inlined_20.c  epsg_inlined_21.c  epsg_inlined_22.c  epsg_inlined_23.c  epsg_inlined_24.c  epsg_inlined_25.c  epsg_inlined_26.c  epsg_inlined_27.c  epsg_inlined_28.c  epsg_inlined_29.c  epsg_inlined_30.c  epsg_inlined_31.c  epsg_inlined_32.c  epsg_inlined_33.c  epsg_inlined_34.c  epsg_inlined_35.c  epsg_inlined_36.c  epsg_inlined_37.c  (+8 more)
src/versioninfo/: version.c
src/virtualtext/: Makefile.am  Makefile.in  virtualtext.c
src/wfs/: wfs_in.c
test/: Makefile.am  Makefile.in  check_add_rt_metadata_triggers.c  check_add_tile_triggers.c  check_bufovflw.c  check_create.c  check_createBaseTables.c  check_dbf_load.c  check_dxf.c  check_exif.c  check_extension.c  check_extra_relations_fncts.c  check_fdo1.c  check_fdo2.c  check_fdo3.c  check_fdo_bufovflw.c  check_gaia_utf8.c  check_gaia_util.c  check_geom_aux.c  check_geometry_cols.c  check_geoscvt_fncts.c  check_get_normal_row.c  check_gpkgGetImageFormat.c  check_gpkgGetImageFormat_png.c  check_gpkgGetImageFormat_tiff.c  check_gpkgGetImageFormat_webp.c  check_init.c  check_init2.c  check_libxml2.c  check_mbrcache.c  check_md5.c  check_point_to_tile.c  check_point_to_tile_broken_geopackage.c  check_point_to_tile_broken_geopackage2.c  check_point_to_tile_broken_srid.c  check_point_to_tile_different_srid.c  check_point_to_tile_integer_coordinates.c  check_point_to_tile_multiresult.c  check_point_to_tile_no_tile.c  check_point_to_tile_too_long_tablename.c  (+28 more)
test/sql_stmt_geos_tests/: Makefile.in  boundary9.testcase  buffer7.testcase  convexhull7.testcase  distance9.testcase  hexgrid10.testcase  hexgrid11.testcase  hexgrid12.testcase  hexgrid15.testcase  hexgrid16.testcase  hexgrid17.testcase  hexgrid20.testcase  hexgrid22.testcase  hexgrid23.testcase  hexgrid9.testcase  issimple2.testcase  polygonize14.testcase  relations8.testcase  simplify15.testcase  simplify16.testcase  squaregrid10.testcase  squaregrid11.testcase  squaregrid12.testcase  squaregrid15.testcase  squaregrid17.testcase  squaregrid22.testcase  squaregrid23.testcase  squaregrid9.testcase  st_length1.testcase  st_length2.testcase  trianggrid10.testcase  trianggrid11.testcase  trianggrid12.testcase  trianggrid15.testcase  trianggrid17.testcase  trianggrid9.testcase  union26.testcase
test/sql_stmt_geosadvanced_tests/: Makefile.in  hexgrid22.testcase  trianggrid22.testcase  trianggrid23.testcase
test/sql_stmt_geostrunk_tests/: Makefile.in  concave_hull15.testcase  concave_hull16.testcase  concave_hull17.testcase  concave_hull18.testcase  concave_hull19.testcase  delaunay12.testcase  delaunay13.testcase  delaunay14.testcase  delaunay15.testcase  delaunay16.testcase  delaunay17.testcase  delaunay18.testcase  delaunay19.testcase
test/sql_stmt_libxml2_tests/: Makefile.am  Makefile.in  hasschemaurixmlblob1.testcase~  hasschemaurixmlblob2.testcase~  hasschemaurixmlblob3.testcase~  hasschemaurixmlblob4.testcase~  hasschemaurixmlblob5.testcase~  hasschemaurixmlblob6.testcase~  iscompressedxmlblob2.testcase~  iscompressedxmlblob3.testcase  iscompressedxmlblob3.testcase~  iscompressedxmlblob4.testcase  iscompressedxmlblob5.testcase  iscompressedxmlblob5.testcase~  iscompressedxmlblob6.testcase  iscompressedxmlblob7.testcase  isschemavalidatedxmlblob2.testcase~  isschemavalidatedxmlblob3.testcase~  isschemavalidatedxmlblob4.testcase~  isschemavalidatedxmlblob5.testcase  isschemavalidatedxmlblob5.testcase~  isschemavalidatedxmlblob6.testcase  isschemavalidatedxmlblob6.testcase~  issldsestyle1.testcase  issldsestyle2.testcase  issldsestyle3.testcase  issldsestyle4.testcase  issldsestyle5.testcase  issldsestyle6.testcase  issldsestyle7.testcase  isvalidxmlblob1.testcase  isvalidxmlblob1.testcase~  isvalidxmlblob2.testcase  isvalidxmlblob2.testcase~  isvalidxmlblob3.testcase  isvalidxmlblob3.testcase~  isvalidxmlblob4.testcase  (+128 more)
(+265 files in other folders)
