check_PROGRAMS = check_version \
		check_init \
		check_create \
		check_dbf_load \
		check_shp_load \
		shape_cp1252 \
		shape_utf8_1 \
		shape_utf8_2 \
		shape_3d \
		check_xls_load \
		check_math_funcs \
		check_gaia_util \
		check_gaia_utf8 \
		check_extension \
		check_sql_stmt \
		check_virtualtable1 \
		check_virtualtable2 \
		check_virtualtable3 \
		check_virtualtable4 \
		check_virtualtable5 \
		check_virtualtable6 \
		check_mbrcache

AM_CFLAGS = -I@srcdir@/../src/headers
AM_LDFLAGS = -L../src -lspatialite -lm $(GCOV_FLAGS)

TESTS = $(check_PROGRAMS)

MOSTLYCLEANFILES = *.gcna *.gcno *.gcda

EXTRA_DIST = shapetest1.dbf \
	shapetest1.prj \
	shapetest1.qpj \
	shapetest1.shp \
	shapetest1.shx \
	shp/new-caledonia/buildings.dbf \
	shp/new-caledonia/buildings.prj \
	shp/new-caledonia/buildings.shp \
	shp/new-caledonia/buildings.shx \
	shp/new-caledonia/points.dbf \
	shp/new-caledonia/points.prj \
	shp/new-caledonia/points.shp \
	shp/new-caledonia/points.shx \
	shp/new-caledonia/railways.dbf \
	shp/new-caledonia/railways.shp \
	shp/new-caledonia/railways.shx \
	shp/gaza/aeroway.dbf \
	shp/gaza/aeroway.prj \
	shp/gaza/aeroway.shp \
	shp/gaza/aeroway.shx \
	shp/gaza/barrier.dbf \
	shp/gaza/barrier.prj \
	shp/gaza/barrier.shp \
	shp/gaza/barrier.shx \
	shp/gaza/route.dbf \
	shp/gaza/route.prj \
	shp/gaza/route.shp \
	shp/gaza/route.shx \
	shp/taiwan/hystoric.dbf \
	shp/taiwan/hystoric.prj \
	shp/taiwan/hystoric.shp \
	shp/taiwan/hystoric.shx \
	shp/taiwan/leisure.dbf \
	shp/taiwan/leisure.prj \
	shp/taiwan/leisure.shp \
	shp/taiwan/leisure.shx \
	shp/taiwan/route.dbf \
	shp/taiwan/route.prj \
	shp/taiwan/route.shp \
	shp/taiwan/route.shx \
	shp/merano-3d/points.dbf \
	shp/merano-3d/points.prj \
	shp/merano-3d/points.shp \
	shp/merano-3d/points.shx \
	shp/merano-3d/polygons.dbf \
	shp/merano-3d/polygons.prj \
	shp/merano-3d/polygons.shp \
	shp/merano-3d/polygons.shx \
	shp/merano-3d/roads.dbf \
	shp/merano-3d/roads.prj \
	shp/merano-3d/roads.shp \
	shp/merano-3d/roads.shx \
	testcase1.xls \
	testcase1.csv \
	sql_stmt_tests/acos20.testcase \
	sql_stmt_tests/acos2.testcase \
	sql_stmt_tests/acos.testcase \
	sql_stmt_tests/acos-text.testcase \
	sql_stmt_tests/acos10.testcase \
	sql_stmt_tests/asin10.testcase \
	sql_stmt_tests/asin1.testcase \
	sql_stmt_tests/asin20.testcase \
	sql_stmt_tests/asin2.testcase \
	sql_stmt_tests/asin-text.testcase \
	sql_stmt_tests/atan00.testcase \
	sql_stmt_tests/atan0.testcase \
	sql_stmt_tests/atan-text.testcase \
	sql_stmt_tests/ceilfloat2.testcase \
	sql_stmt_tests/ceilfloat.testcase \
	sql_stmt_tests/ceil-int.testcase \
	sql_stmt_tests/ceilnull.testcase \
	sql_stmt_tests/cos00.testcase \
	sql_stmt_tests/cos0.testcase \
	sql_stmt_tests/cos-text.testcase \
	sql_stmt_tests/cot0.testcase \
	sql_stmt_tests/cot00.testcase \
	sql_stmt_tests/cotpi2.testcase \
	sql_stmt_tests/cot-text.testcase \
	sql_stmt_tests/degrees45.testcase \
	sql_stmt_tests/degrees.testcase \
	sql_stmt_tests/degreestext.testcase \
	sql_stmt_tests/exp00.testcase \
	sql_stmt_tests/exp0.testcase \
	sql_stmt_tests/exp10.testcase \
	sql_stmt_tests/exp1.testcase \
	sql_stmt_tests/expneg.testcase \
	sql_stmt_tests/exptext.testcase \
	sql_stmt_tests/log10-0.0.testcase \
	sql_stmt_tests/log10-100.0.testcase \
	sql_stmt_tests/log10-100.testcase \
	sql_stmt_tests/log10-text.testcase \
	sql_stmt_tests/log2-0.0.testcase \
	sql_stmt_tests/log2-0.testcase \
	sql_stmt_tests/log2-4.0.testcase \
	sql_stmt_tests/log2-4.testcase \
	sql_stmt_tests/log2-text.testcase \
	sql_stmt_tests/logn00.testcase \
	sql_stmt_tests/logn0.testcase \
	sql_stmt_tests/logn10.testcase \
	sql_stmt_tests/logn1.testcase \
	sql_stmt_tests/logn2-01.testcase \
	sql_stmt_tests/logn2-02.testcase \
	sql_stmt_tests/logn2-2.2.testcase \
	sql_stmt_tests/logn2-4.2int.testcase \
	sql_stmt_tests/logn2-4.2.testcase \
	sql_stmt_tests/logn2-text2.testcase \
	sql_stmt_tests/logn2-text3.testcase \
	sql_stmt_tests/logn2-text4.testcase \
	sql_stmt_tests/logn2-text.testcase \
	sql_stmt_tests/logn-text.testcase \
	sql_stmt_tests/pi.testcase \
	sql_stmt_tests/pow00-1.testcase \
	sql_stmt_tests/pow00-2.testcase \
	sql_stmt_tests/pow00double.testcase \
	sql_stmt_tests/pow00.testcase \
	sql_stmt_tests/pow-badarg1.testcase \
	sql_stmt_tests/pow-badarg2.testcase \
	sql_stmt_tests/pow-edom.testcase \
	sql_stmt_tests/pow-fp.testcase \
	sql_stmt_tests/rad0.testcase \
	sql_stmt_tests/radpi.testcase \
	sql_stmt_tests/rad-text.testcase \
	sql_stmt_tests/round-text.testcase \
	sql_stmt_tests/round-31.testcase \
	sql_stmt_tests/round30.testcase \
	sql_stmt_tests/round0.testcase \
	sql_stmt_tests/round-29.testcase \
	sql_stmt_tests/round29.testcase \
	sql_stmt_tests/round31.testcase \
	sql_stmt_tests/round3.testcase \
	sql_stmt_tests/sign00.testcase \
	sql_stmt_tests/sign01.testcase \
	sql_stmt_tests/sign0.testcase \
	sql_stmt_tests/sign10.testcase \
	sql_stmt_tests/signeg2int.testcase \
	sql_stmt_tests/signeg2.testcase \
	sql_stmt_tests/signeg.testcase \
	sql_stmt_tests/signtext.testcase \
	sql_stmt_tests/sin-text.testcase \
	sql_stmt_tests/sin-pi2.testcase \
	sql_stmt_tests/sin-pi.testcase \
	sql_stmt_tests/sinpi2.testcase \
	sql_stmt_tests/sin00.testcase \
	sql_stmt_tests/sin0.testcase \
	sql_stmt_tests/sinpi.testcase \
	sql_stmt_tests/sqrt-10.testcase \
	sql_stmt_tests/sqrt0.testcase \
	sql_stmt_tests/sqrt00.testcase \
	sql_stmt_tests/sqrt-640.testcase \
	sql_stmt_tests/sqrt-text.testcase \
	sql_stmt_tests/sqrt-64.testcase \
	sql_stmt_tests/sqrt-1.testcase \
	sql_stmt_tests/tan-pi.testcase \
	sql_stmt_tests/tanpi.testcase \
	sql_stmt_tests/tan00.testcase \
	sql_stmt_tests/tan-text.testcase \
	sql_stmt_tests/tan0.testcase \
	sql_stmt_tests/tanpi4.testcase