check_PROGRAMS = check_version \
		check_init \
		check_create \
		check_dbf_load \
		check_shp_load \
		check_shp_load_3d \
		shape_cp1252 \
		shape_utf8_1 \
		shape_utf8_2 \
		shape_3d \
		check_xls_load \
		check_math_funcs \
		check_gaia_util \
		check_gaia_utf8 \
		check_extension \
		check_sql_stmt \
		check_virtualtable1 \
		check_virtualtable2 \
		check_virtualtable3 \
		check_virtualtable4 \
		check_virtualtable5 \
		check_virtualtable6 \
		check_mbrcache \
		check_spatialindex

AM_CFLAGS = -I@srcdir@/../src/headers
AM_LDFLAGS = -L../src -lspatialite -lm $(GCOV_FLAGS)

TESTS = $(check_PROGRAMS)

MOSTLYCLEANFILES = *.gcna *.gcno *.gcda

EXTRA_DIST = shapetest1.dbf \
	shapetest1.prj \
	shapetest1.qpj \
	shapetest1.shp \
	shapetest1.shx \
	shp/new-caledonia/buildings.dbf \
	shp/new-caledonia/buildings.prj \
	shp/new-caledonia/buildings.shp \
	shp/new-caledonia/buildings.shx \
	shp/new-caledonia/points.dbf \
	shp/new-caledonia/points.prj \
	shp/new-caledonia/points.shp \
	shp/new-caledonia/points.shx \
	shp/new-caledonia/railways.dbf \
	shp/new-caledonia/railways.shp \
	shp/new-caledonia/railways.shx \
	shp/gaza/aeroway.dbf \
	shp/gaza/aeroway.prj \
	shp/gaza/aeroway.shp \
	shp/gaza/aeroway.shx \
	shp/gaza/barrier.dbf \
	shp/gaza/barrier.prj \
	shp/gaza/barrier.shp \
	shp/gaza/barrier.shx \
	shp/gaza/route.dbf \
	shp/gaza/route.prj \
	shp/gaza/route.shp \
	shp/gaza/route.shx \
	shp/taiwan/hystoric.dbf \
	shp/taiwan/hystoric.prj \
	shp/taiwan/hystoric.shp \
	shp/taiwan/hystoric.shx \
	shp/taiwan/leisure.dbf \
	shp/taiwan/leisure.prj \
	shp/taiwan/leisure.shp \
	shp/taiwan/leisure.shx \
	shp/taiwan/route.dbf \
	shp/taiwan/route.prj \
	shp/taiwan/route.shp \
	shp/taiwan/route.shx \
	shp/merano-3d/points.dbf \
	shp/merano-3d/points.prj \
	shp/merano-3d/points.shp \
	shp/merano-3d/points.shx \
	shp/merano-3d/polygons.dbf \
	shp/merano-3d/polygons.prj \
	shp/merano-3d/polygons.shp \
	shp/merano-3d/polygons.shx \
	shp/merano-3d/roads.dbf \
	shp/merano-3d/roads.prj \
	shp/merano-3d/roads.shp \
	shp/merano-3d/roads.shx \
	testcase1.xls \
	testcase1.csv \
	sql_stmt_tests/acos10.testcase \
	sql_stmt_tests/acos20.testcase \
	sql_stmt_tests/acos2.testcase \
	sql_stmt_tests/acos.testcase \
	sql_stmt_tests/acos-text.testcase \
	sql_stmt_tests/asin10.testcase \
	sql_stmt_tests/asin1.testcase \
	sql_stmt_tests/asin20.testcase \
	sql_stmt_tests/asin2.testcase \
	sql_stmt_tests/asin-text.testcase \
	sql_stmt_tests/aswkt-text.testcase \ \
	sql_stmt_tests/atan00.testcase \
	sql_stmt_tests/atan0.testcase \
	sql_stmt_tests/atan-text.testcase \
	sql_stmt_tests/buffer1.testcase \
	sql_stmt_tests/buffer2.testcase \
	sql_stmt_tests/buffer3.testcase \
	sql_stmt_tests/buffer4.testcase \
	sql_stmt_tests/buffer5.testcase \
	sql_stmt_tests/buffer6.testcase \
	sql_stmt_tests/buffer7.testcase \
	sql_stmt_tests/ceilfloat2.testcase \
	sql_stmt_tests/ceilfloat.testcase \
	sql_stmt_tests/ceil-int.testcase \
	sql_stmt_tests/ceilnull.testcase \
	sql_stmt_tests/ch_m.testcase \
	sql_stmt_tests/cm_m.testcase \
	sql_stmt_tests/cos00.testcase \
	sql_stmt_tests/cos0.testcase \
	sql_stmt_tests/cos-text.testcase \
	sql_stmt_tests/cot00.testcase \
	sql_stmt_tests/cot0.testcase \
	sql_stmt_tests/cotpi2.testcase \
	sql_stmt_tests/cot-text.testcase \
	sql_stmt_tests/createtopo10.testcase \
	sql_stmt_tests/createtopo11.testcase \
	sql_stmt_tests/createtopo12.testcase \
	sql_stmt_tests/createtopo13.testcase \
	sql_stmt_tests/createtopo14.testcase \
	sql_stmt_tests/createtopo15.testcase \
	sql_stmt_tests/createtopo16.testcase \
	sql_stmt_tests/createtopo17.testcase \
	sql_stmt_tests/createtopo18.testcase \
	sql_stmt_tests/createtopo1.testcase \
	sql_stmt_tests/createtopo2.testcase \
	sql_stmt_tests/createtopo3.testcase \
	sql_stmt_tests/createtopo4.testcase \
	sql_stmt_tests/createtopo5.testcase \
	sql_stmt_tests/createtopo6.testcase \
	sql_stmt_tests/createtopo7.testcase \
	sql_stmt_tests/createtopo8.testcase \
	sql_stmt_tests/createtopo9.testcase \
	sql_stmt_tests/degrees45.testcase \
	sql_stmt_tests/degrees.testcase \
	sql_stmt_tests/degreestext.testcase \
	sql_stmt_tests/dm_m.testcase \
	sql_stmt_tests/exp00.testcase \
	sql_stmt_tests/exp0.testcase \
	sql_stmt_tests/exp10.testcase \
	sql_stmt_tests/exp1.testcase \
	sql_stmt_tests/expneg.testcase \
	sql_stmt_tests/exptext.testcase \
	sql_stmt_tests/fath_m.testcase \
	sql_stmt_tests/ft_m.testcase \
	sql_stmt_tests/geomfromtext1.testcase \
	sql_stmt_tests/geomfromtext2.testcase \
	sql_stmt_tests/geomfromtext3.testcase \
	sql_stmt_tests/geomfromtext4.testcase \
	sql_stmt_tests/geomfromtext5.testcase \
	sql_stmt_tests/geomfromtext6.testcase \
	sql_stmt_tests/geomfromtext7.testcase \
	sql_stmt_tests/geomfromtext8.testcase \
	sql_stmt_tests/geomfromtext9.testcase \
	sql_stmt_tests/greatcircle-poly2.testcase \
	sql_stmt_tests/greatcircle-poly.testcase \
	sql_stmt_tests/greatcircle.testcase \
	sql_stmt_tests/greatcircle-text.testcase \
	sql_stmt_tests/ind_ch_m.testcase \
	sql_stmt_tests/ind_ft_m.testcase \
	sql_stmt_tests/ind_yd_m.testcase \
	sql_stmt_tests/in_m.testcase \
	sql_stmt_tests/isclosed1.testcase \
	sql_stmt_tests/isclosed2.testcase \
	sql_stmt_tests/isclosed3.testcase \
	sql_stmt_tests/isclosed4.testcase \
	sql_stmt_tests/isclosed5.testcase \
	sql_stmt_tests/isring1.testcase \
	sql_stmt_tests/isring2.testcase \
	sql_stmt_tests/isring4.testcase \
	sql_stmt_tests/issimple1.testcase \
	sql_stmt_tests/issimple2.testcase \
	sql_stmt_tests/issimple3.testcase \
	sql_stmt_tests/issimple4.testcase \
	sql_stmt_tests/issimple5.testcase \
	sql_stmt_tests/isvalid1.testcase \
	sql_stmt_tests/isvalid2.testcase \
	sql_stmt_tests/isvalid3.testcase \
	sql_stmt_tests/isvalid4.testcase \
	sql_stmt_tests/isvalid5.testcase \
	sql_stmt_tests/isvalid6.testcase \
	sql_stmt_tests/km_m.testcase \
	sql_stmt_tests/link_m.testcase \
	sql_stmt_tests/log10-0.0.testcase \
	sql_stmt_tests/log10-100.0.testcase \
	sql_stmt_tests/log10-100.testcase \
	sql_stmt_tests/log10-text.testcase \
	sql_stmt_tests/log2-0.0.testcase \
	sql_stmt_tests/log2-0.testcase \
	sql_stmt_tests/log2-4.0.testcase \
	sql_stmt_tests/log2-4.testcase \
	sql_stmt_tests/log2-text.testcase \
	sql_stmt_tests/logn00.testcase \
	sql_stmt_tests/logn0.testcase \
	sql_stmt_tests/logn10.testcase \
	sql_stmt_tests/logn1.testcase \
	sql_stmt_tests/logn2-01.testcase \
	sql_stmt_tests/logn2-02.testcase \
	sql_stmt_tests/logn2-2.2.testcase \
	sql_stmt_tests/logn2-4.2int.testcase \
	sql_stmt_tests/logn2-4.2.testcase \
	sql_stmt_tests/logn2-text2.testcase \
	sql_stmt_tests/logn2-text3.testcase \
	sql_stmt_tests/logn2-text4.testcase \
	sql_stmt_tests/logn2-text.testcase \
	sql_stmt_tests/logn-text.testcase \
	sql_stmt_tests/makeline10.testcase \
	sql_stmt_tests/makeline11.testcase \
	sql_stmt_tests/makeline12.testcase \
	sql_stmt_tests/makeline13.testcase \
	sql_stmt_tests/makeline14.testcase \
	sql_stmt_tests/makeline15.testcase \
	sql_stmt_tests/makeline16.testcase \
	sql_stmt_tests/makeline17.testcase \
	sql_stmt_tests/makeline18.testcase \
	sql_stmt_tests/makeline2.testcase \
	sql_stmt_tests/makeline3.testcase \
	sql_stmt_tests/makeline4.testcase \
	sql_stmt_tests/makeline5.testcase \
	sql_stmt_tests/makeline6.testcase \
	sql_stmt_tests/makeline7.testcase \
	sql_stmt_tests/makeline8.testcase \
	sql_stmt_tests/makeline9.testcase \
	sql_stmt_tests/makeline.testcase \
	sql_stmt_tests/makepoint1.testcase \
	sql_stmt_tests/makepoint2.testcase \
	sql_stmt_tests/makepoint3.testcase \
	sql_stmt_tests/makepoint4.testcase \
	sql_stmt_tests/makepoint5.testcase \
	sql_stmt_tests/makepoint6.testcase \
	sql_stmt_tests/makepoint7.testcase \
	sql_stmt_tests/makepoint-null1.testcase \
	sql_stmt_tests/makepoint-null2.testcase \
	sql_stmt_tests/makepoint-null3.testcase \
	sql_stmt_tests/makepoint-null4.testcase \
	sql_stmt_tests/makepoint-null5.testcase \
	sql_stmt_tests/makepoint-null6.testcase \
	sql_stmt_tests/makepoint-null7.testcase \
	sql_stmt_tests/m_ch.testcase \
	sql_stmt_tests/m_cm.testcase \
	sql_stmt_tests/m_dm.testcase \
	sql_stmt_tests/m_fath.testcase \
	sql_stmt_tests/m_ft.testcase \
	sql_stmt_tests/m_ft-text.testcase \
	sql_stmt_tests/mi_m.testcase \
	sql_stmt_tests/m_ind_ch.testcase \
	sql_stmt_tests/m_ind_ft.testcase \
	sql_stmt_tests/m_ind_yd.testcase \
	sql_stmt_tests/m_in.testcase \
	sql_stmt_tests/m_in_us.testcase \
	sql_stmt_tests/m_km.testcase \
	sql_stmt_tests/m_ln.testcase \
	sql_stmt_tests/m_mi.testcase \
	sql_stmt_tests/m_mm.testcase \
	sql_stmt_tests/mm_m.testcase \
	sql_stmt_tests/m_nm.testcase \
	sql_stmt_tests/m_us_ch.testcase \
	sql_stmt_tests/m_us_ft.testcase \
	sql_stmt_tests/m_yd.testcase \
	sql_stmt_tests/m_yd_us.testcase \
	sql_stmt_tests/nm_m.testcase \
	sql_stmt_tests/pi.testcase \
	sql_stmt_tests/pow00-1.testcase \
	sql_stmt_tests/pow00-2.testcase \
	sql_stmt_tests/pow00double.testcase \
	sql_stmt_tests/pow00.testcase \
	sql_stmt_tests/pow-badarg1.testcase \
	sql_stmt_tests/pow-badarg2.testcase \
	sql_stmt_tests/pow-edom.testcase \
	sql_stmt_tests/pow-fp.testcase \
	sql_stmt_tests/rad0.testcase \
	sql_stmt_tests/radpi.testcase \
	sql_stmt_tests/rad-text.testcase \
	sql_stmt_tests/reflectcoords1.testcase \
	sql_stmt_tests/reflectcoords2.testcase \
	sql_stmt_tests/reflectcoords3.testcase \
	sql_stmt_tests/reflectcoords4.testcase \
	sql_stmt_tests/reflectcoords5.testcase \
	sql_stmt_tests/reflectcoords6.testcase \
	sql_stmt_tests/reflectcoords7.testcase \
	sql_stmt_tests/reflectcoords8.testcase \
	sql_stmt_tests/round0.testcase \
	sql_stmt_tests/round-29.testcase \
	sql_stmt_tests/round29.testcase \
	sql_stmt_tests/round30.testcase \
	sql_stmt_tests/round-31.testcase \
	sql_stmt_tests/round31.testcase \
	sql_stmt_tests/round3.testcase \
	sql_stmt_tests/round-text.testcase \
	sql_stmt_tests/sign00.testcase \
	sql_stmt_tests/sign01.testcase \
	sql_stmt_tests/sign0.testcase \
	sql_stmt_tests/sign10.testcase \
	sql_stmt_tests/signeg2int.testcase \
	sql_stmt_tests/signeg2.testcase \
	sql_stmt_tests/signeg.testcase \
	sql_stmt_tests/signtext.testcase \
	sql_stmt_tests/sin00.testcase \
	sql_stmt_tests/sin0.testcase \
	sql_stmt_tests/sin-pi2.testcase \
	sql_stmt_tests/sinpi2.testcase \
	sql_stmt_tests/sin-pi.testcase \
	sql_stmt_tests/sinpi.testcase \
	sql_stmt_tests/sin-text.testcase \
	sql_stmt_tests/sqrt00.testcase \
	sql_stmt_tests/sqrt0.testcase \
	sql_stmt_tests/sqrt-10.testcase \
	sql_stmt_tests/sqrt-1.testcase \
	sql_stmt_tests/sqrt-640.testcase \
	sql_stmt_tests/sqrt-64.testcase \
	sql_stmt_tests/sqrt-text.testcase \
	sql_stmt_tests/st_m1.testcase \
	sql_stmt_tests/st_m2.testcase \
	sql_stmt_tests/st_m3.testcase \
	sql_stmt_tests/st_m4.testcase \
	sql_stmt_tests/st_m5.testcase \
	sql_stmt_tests/st_m6.testcase \
	sql_stmt_tests/st_x1.testcase \
	sql_stmt_tests/st_x2.testcase \
	sql_stmt_tests/st_x3.testcase \
	sql_stmt_tests/st_x4.testcase \
	sql_stmt_tests/st_x5.testcase \
	sql_stmt_tests/st_x6.testcase \
	sql_stmt_tests/st_y1.testcase \
	sql_stmt_tests/st_y2.testcase \
	sql_stmt_tests/st_y3.testcase \
	sql_stmt_tests/st_y4.testcase \
	sql_stmt_tests/st_y5.testcase \
	sql_stmt_tests/st_z1.testcase \
	sql_stmt_tests/st_z2.testcase \
	sql_stmt_tests/st_z3.testcase \
	sql_stmt_tests/st_z4.testcase \
	sql_stmt_tests/st_z5.testcase \
	sql_stmt_tests/st_z6.testcase \
	sql_stmt_tests/swapcoords1.testcase \
	sql_stmt_tests/swapcoords2.testcase \
	sql_stmt_tests/swapcoords3.testcase \
	sql_stmt_tests/swapcoords4.testcase \
	sql_stmt_tests/tan00.testcase \
	sql_stmt_tests/tan0.testcase \
	sql_stmt_tests/tanpi4.testcase \
	sql_stmt_tests/tan-pi.testcase \
	sql_stmt_tests/tanpi.testcase \
	sql_stmt_tests/tan-text.testcase \
	sql_stmt_tests/us_ch_m.testcase \
	sql_stmt_tests/us_ft_m.testcase \
	sql_stmt_tests/us_in_m.testcase \
	sql_stmt_tests/us_mi_m.testcase \
	sql_stmt_tests/us_yd_m.testcase \
	sql_stmt_tests/yd_m.testcase





